Thu May 14 12:01:53 MET DST 1998 hannes
* a ring with a coeff. field GF(p,n) cannot be constructed
  without gftables
Wed May 13 16:52:09 MET DST 1998 hannes
	* changed syntax of NOT (does not require () any more)
Tue May 12 16:58:13 MET DST 1998 hannes
	* changed return type of option(): none -> string
Tue May 12 11:57:50 MET DST 1998 hannes
	* added "lres"
1998-05-08  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* extra.cc (jjSYSTEM): put all undocumented system calls into
	#ifdef HAVE_EXTENDED_SYSTEM which is _not_ defined by default

	* exteded system("random") to always return the seed of the random 
	generator
vThu May  7 19:49:34 MET DST 1998 hannes
        * added syntax rule "proc <name> <arglist> <string> <body>"
	* speedup for feReadLine
Thu Apr 30 19:16:45 MET DST 1998 hannes
	* fixed "missing e-o-buffer" for long lines in febase.inc
Wed Apr 29 18:26:19 MET DST 1998 hannes
	* added filed list_length tossyStrategy
	( for conversion list <-> resolution): syz.h, syz1.cc, iparith.cc
1998-04-29  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* mmutil.c (mmGetIndex): new implementation: Use generated lookup
	table (mmutil.inc) instead of "binary" search on size

Tue Apr 28 19:56:46 MET DST 1998 hannes
  * ipassign.cc: fixed assignment of resolution to list: need ipMoveId
1998-04-28  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* kstd2.cc (redHomog): Some more ouput for KDEBUG && TEST_OPT_DEBUG

	* mminit.cc: introduced memory(2) which measures physical memory
	consumption using the system call sbrk (this never lies!) 

Mon Apr 27 18:07:21 MET DST 1998 hannes
	* use ReAlloc for enlargeT, enlargeL  (kutil.cc)
Mon Apr 27 16:45:41 MET DST 1998 hannes
        * fixed conversion of factory 0 to poly NULL (clapconv.cc)

1998-04-27  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* febase.cc (myfread): introduced myfread and myfopen which assure 
	that newlines in text files are always \n
